...
                                                    <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <subviews>
                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="card1" translatesAutoresizingMaskIntoConstraints="NO" id="GjC-UU-dor">
                                                            <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
                                                        </imageView>
                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back-1" translatesAutoresizingMaskIntoConstraints="NO" id="ekS-YB-SW4">
                                                            <rect key="frame" x="0.0" y="0.0" width="158" height="224"/>
                                                        </imageView>
                                                    </subviews>
                                                </view>
                                                <constraints>
                                                    <constraint firstAttribute="trailing" secondItem="ekS-YB-SW4" secondAttribute="trailing" id="83D-ly-G3S"/>
...
                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Olo-Zq-TKz">
                                        <rect key="frame" x="62" y="763" width="290" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="290" id="FPs-Xk-CO0"/>
                                            <constraint firstAttribute="height" constant="50" id="gfW-VD-TNn"/>
                                        </constraints>
                                        <state key="normal" image="Exit Game Button"/>
                                        <connections>
                                            <segue destination="Yo8-tQ-5R2" kind="show" id="fzX-AB-1lh"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
