...
                                <rect key="frame" x="10" y="20" width="42" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="MotorGameHomeButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="jx1-cd-gOJ"/>
                                    <constraint firstAttribute="width" secondItem="awc-kx-vLC" secondAttribute="height" multiplier="111:79" id="m2v-6a-tcX"/>
                                </constraints>
                                <state key="normal" title="Button" image="home-white"/>
                                <connections>
                                    <segue destination="5E0-B4-Qou" kind="show" id="8Qu-Al-Nrx"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
